css/main.scss
$yellow: #f8d545;
$purple: #913abd;
$pink: #e8128c;
$blue: #64d7ae;
$white: #fafdfa;
$section-padding: 28px;

html,
body {
    margin: 0;
    padding: 0;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    h2 {
        margin: 0;
    }
    .container {
        margin: 0 auto;
        max-width: 1170px;
    }
}

.intro {
    margin: 0;
    padding: 46px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    .intro-name {
        margin: 0;
        font-weight: 200;
        font-size: 36px;
        color: $purple;
    }
    .intro-title {
    }
}

.projects-section {
    padding: $section-padding;
    .projects-title {
        margin-bottom: 22px;
        font-size: 32px;
        font-weight: 200;
        color: $purple;
    }
    .project {
        width: 100%;
    }
    .project-img {
        width: 100%;
    }
    .project-title {
        margin-bottom: 12px;
    }
}

.skills-section {
    padding: $section-padding;
    .skills-title {
        color: $purple;
        font-size: 32px;
        font-weight: 200;
    }
    .skillset-title {
        letter-spacing: 1.5px;
        font-weight: 400px;
        font-size: 22px;
        margin-bottom: 12px;
    }
    .skill-title {
        font-weight: 200;
    }
}

.education-section {
    padding: $section-padding;
    .education-title {
        font-size: 32px;
        font-weight: 200;
        color: $purple;
    }
    .school-title {
    }
}

.work-section {
    padding: $section-padding;
    .work-title {
        font-size: 32px;
        font-weight: 200;
        color: $purple;
    }
    .job-title {
    }
}

.contact-section {
    padding: $section-padding;
    .contact-title {
        font-size: 32px;
        font-weight: 200;
        color: $purple;
    }
    .contact {
    }
}

@media (min-width: 435px) {
    .intro {
        align-items: flex-start;
    }
    .projects-section {
        .project {
            width: 48%;
        }
        .projects-content {
            display: flex;
            flex-wrap: wrap;
            justify-content: space-between;
        }
    }
}

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
    .projects-section {
        .project {
            width: 32%;
        }
        .project:nth-child(3n+2) {
            margin: 0 2%;
        }
        .projects-content {
            display: flex;
            flex-wrap: wrap;
            justify-content: flex-start;
        }
    }
}

/* Medium devices (desktops, 992px and up) */
@media (min-width: 992px) {
    .projects-section {
        .project {
            width: 24%;
        }
        .project:nth-child(n) {
            margin: 0;
            margin-right: 1.3333333%;
        }
        .project:nth-child(n+4) {
            margin-right: 0;
        }
        .projects-content {
            display: flex;
            flex-wrap: wrap;
        }
    }
}

/* Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {

}

